--- a/git/git.html
+++ b/git/git.html
@@ -1,11 +1,11 @@
 <html>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-<link href="twit.css" type="text/css" rel="stylesheet">
+<link href="github.css" type="text/css" rel="stylesheet">
 <div class="artboard">
 	<div class="button" onclick="onclick">
-		<i class="fab fa-twitter"></i>
+		<i class="fab fa-git-square"></i>
 	</div>
-	<div class="links"><a target="_blank" href="https://twitter.com/@PatelMubeen99/">@PateMubeen99</a>
+	<div class="links"><a target="_blank" href="https://github.com/mubeenpatel99">mubeenpatel99</a>
 	</div>
 </div>
 </html>
